# rasterizer

./: CMakeLists.txt  LICENSE  README.md
data/: greywall.ppm
include/: CMakeLists.txt  fragment.h  framebuffer.h  mat.h  output.h  pipeline.h  texture.h  vec.h  vertex.h
old/: main.cpp
src/: CMakeLists.txt  framebuffer.cpp  main.cpp  mat.cpp  output.cpp  texture.cpp  vertex.cpp
